# xbmc-pvr-addons

./: configure.ac
addons/: Makefile.am
addons/pvr.a1tv/: Makefile.am
addons/pvr.a1tv/addon/: addon.xml.in  channels.json
addons/pvr.a1tv/addon/resources/: settings.xml
addons/pvr.a1tv/project/VS2010Express/: pvr_a1tv.vcxproj  pvr_a1tv.vcxproj.filters
addons/pvr.a1tv/src/: A1TVData.cpp  A1TVData.h  client.cpp  client.h
addons/pvr.iptvsimple/addon/: addon.xml.in
addons/pvr.iptvsimple/src/: client.cpp
